# notification_service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pre-commit-config.yml  pyproject.toml  pytest.ini  requirements.txt
client/: admin.py  models.py  serializers.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
distribution/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
message/: admin.py  models.py  urls.py  views.py
tests/: conftest.py
tests/client/: mock_clients_data.py  test_clients.py
tests/distribution/: mock_distribution_data.py  test_distribution.py
tests/message/: mock_message_data.py  test_message.py
